<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CS4518_FinalProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    // Login Screen Strings
    <string name="sign_in">Sign In</string>
    <string name="sign_in_greet">Hello there! Nice to see you again.</string>
    <string name="sign_in_usern">Username</string>
    <string name="sign_in_passw">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="quote">Quote</string>

    // Location Screen Strings
    <string name="gps_perm">GPS Permissions</string>
    <string name="where_r_u">This app would like to use your location.</string>
    <string name="allow">Continue</string>
    <string name="dont_allow">Don\'t Allow</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="country_label">Country</string>

    // Moth Screen Strings
    <string name="greeting">hello</string>
    <string name="username" tools:ignore="DuplicateDefinition">my name</string>
    <string name="other_username" tools:ignore="DuplicateDefinition">other name</string>
    <string name="user_location" tools:ignore="DuplicateDefinition">my location</string>
    <string name="other_location" tools:ignore="DuplicateDefinition">other location</string>
    <string name="message_question">What would you like to send?</string>
    <string name="love">Love</string>
    <string name="peace">Peace</string>
    <string name="support">Support</string>
    <string name="hope">Hope</string>

    // Send Screen Strings
    <string name="just_sent">You just sent: </string>
    <string name="lots_o">a lot of</string>
    <string name="back_btn">Back</string>

</resources>