<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_otherMoth"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/moth_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_otherUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_username" />

            <TextView
                android:id="@+id/textView_otherLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_location" />

            <Button
                android:id="@+id/button_otherMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0"
                android:backgroundTint="#E91E63"
                android:foregroundTint="#E91E63"
                android:text="@string/love" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_youSent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/moth_image" />

        <TextView
            android:id="@+id/textView_sendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/message_question" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_love"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="#E91E63"
                    android:text="@string/love" />

                <Button
                    android:id="@+id/button_peace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="#8BC34A"
                    android:text="@string/peace" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_hope"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="#FF9800"
                    android:text="@string/hope" />

                <Button
                    android:id="@+id/button_support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="#03A9F4"
                    android:text="@string/support" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>